--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -16,6 +16,7 @@
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+@*<link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />*@
 
 <div id="dialog" title="Quotation" class="dialogstyle">
     <table id="example2" class="display" cellspacing="0">
