--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -9,6 +9,7 @@
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
+@*<link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />*@
 
 <script>
 
@@ -66,7 +67,7 @@
 				},
 				{
 				    title: 'J00002 (S)',
-				    url: 'http://localhost:1038/JobOrder/Edit',
+				    url: 'http://localhost:1042/JobOrder/EditJobOrder',
 				    start: '2017-01-19'
 				},
 				{
