--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -9,6 +9,7 @@
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
+@*<link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />*@
 
 <script>
 
@@ -46,7 +47,7 @@
 				},
 				{
 				    title: 'Leader1 (J00002)',
-				    url: 'http://localhost:1038/Manpower/Index',
+				    url: 'http://localhost:1042/Manpower/IndexManpower',
 				    start: '2017-01-05'
 				},
 				{
