--- a/Alpha/AlphaMvc/Views/Employee/ExpiredEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/ExpiredEmployee.cshtml
@@ -4,8 +4,8 @@
 
 <h3>Expired Certificate</h3>
 <section class="features">
-    <table id="example" class="display" cellspacing="0">
-        <thead>
+    <table class="table table-striped">
+        <thead class="bgthead">
             <tr>
                 <th>No.</th>
                 <th>รายละเอียด</th>
@@ -77,6 +77,7 @@
                 <td>นายxxx xxxx, บัตรบริษัท xxxx</td>
                 <td class="hideANDseek">C0009</td>
                 <td>25/12/2017</td>
+                <td>หมายเหตุ9</td>
             </tr>
 
         </tbody>
