--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -52,9 +52,8 @@
     </tr>
 </table>
 
-<div class="datagrid">
-    <table>
-        <thead>
+    <table class="table table-striped">
+        <thead class="bgthead">
             <tr>
                 <th>No.</th>
                 <th class="hidecolumn">ID</th>
@@ -64,7 +63,7 @@
         </thead>
         <tbody id="result"></tbody>
     </table>
-</div>
+
 
 <script>
     $(document).ready(function () {
