--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -14,8 +14,8 @@
 </table>
 @* ------------------------------- grid  -------------------------------*@
 
-<table id="test" class="display" cellspacing="0">
-    <thead>
+<table class="table table-striped">
+    <thead class="bgthead">
         <tr>
             <th>No.</th>
             <th>Job No.</th>
