--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -26,8 +26,8 @@
             </ul>
 
             <div class="grigbar">
-                <table>
-                    <thead>
+                <table class="table table-striped">
+                    <thead class="bgthead">
                         <tr>
                             <th rowspan="3">Customer</th>
                             <th rowspan="3">Job site</th>
