--- a/Alpha/AlphaMvc/Content/editable/tablestyle.css
+++ b/Alpha/AlphaMvc/Content/editable/tablestyle.css
@@ -69,6 +69,7 @@
         background: #91b6b4;
         color: white;
         text-align: center;
+        font-size: small;
     }
 
         .theader tr {
@@ -88,6 +89,7 @@
     table td {
         /*vertical-align: middle;*/
         vertical-align: inherit;
+        padding: 0.5px;
     }
 
         table td input {
@@ -110,7 +112,7 @@
             height: 25px;
         }
         table td .txtdiscount {
-            width: 165px;
+            width: 167px;
             margin: 0;
             background: #fff;
             height: 25px;
@@ -160,7 +162,8 @@
                 height: 18px;
                 width: 90px;*/
         background: #fff;
-        height: 29px;
+        height: 25px;
+        font-size: small;
         width: 150px;
         padding: 2px !important;
     }
@@ -169,7 +172,7 @@
                 height: 18px;
                 width: 90px;*/
         background: #fff;
-        height: 29px;
+        height: 25px;
         width: 120px;
         padding: 2px !important;
     }
@@ -178,13 +181,14 @@
                 height: 18px;
                 width: 90px;*/
         background: #fff;
-        height: 29px;
+        height: 25px;
         width: 220px;
         padding: 2px !important;
+        font-size: small;
     }
     table td .selday {
         background: #fff;
-        height: 29px;
+        height: 25px;
         width: 50px;
         padding: 2px !important;
     }
