--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -4,17 +4,17 @@
 
 <h2>BreakDownCost</h2>
 
-    @*<br />*@
-    @* ------------------------------- Header -------------------------------*@
-    <table class="btnAdd">
-        <tr>
-            <td>
-                <div class="topictd">List</div>
-                <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
-            </td>
-        </tr>
-    </table>
-   @* ------------------------------- grid  -------------------------------*@
+@*<br />*@
+@* ------------------------------- Header -------------------------------*@
+<table class="btnAdd">
+    <tr>
+        <td>
+            <div class="topictd">List</div>
+            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+        </td>
+    </tr>
+</table>
+@* ------------------------------- grid  -------------------------------*@
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 <style>
     .paging-nav {
@@ -55,109 +55,109 @@
     </tr>
 </table>
 
-<div class="datagrid">
-    <table>
-        <thead>
-            <tr>
-                <th>No.</th>
-                <th class="hidecolumn">ID</th>
-                <th>Doc Version</th>
-                <th>ใบเสนอราคา</th>
-                <th>ราคาขาย</th>
-                <th>ราคาทุน</th>
-                <th>กำไร</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody id="result"></tbody>
-    </table>
 
-    @*<table id="result"></table>*@
-</div>
+<table class="table table-striped">
+    <thead class="bgthead">
+        <tr>
+            <th>No.</th>
+            <th class="hidecolumn">ID</th>
+            <th>Doc Version</th>
+            <th>ใบเสนอราคา</th>
+            <th>ราคาขาย</th>
+            <th>ราคาทุน</th>
+            <th>กำไร</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody id="result"></tbody>
+</table>
+
+@*<table id="result"></table>*@
+
 
 @* ------------------------------- grid  -------------------------------*@
 
 <script>
-        $(document).ready(function () {
+    $(document).ready(function () {
 
 
-            $('#tableData').paging({ limit: 5 });
+        $('#tableData').paging({ limit: 5 });
 
 
-            //------------------------- Paging -------------------------
+        //------------------------- Paging -------------------------
 
-            //------------------------- Sorting ------------------------
-            $('th').click(function () {
-                var table = $(this).parents('table').eq(0)
-                var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
-                this.asc = !this.asc
-                if (!this.asc) { rows = rows.reverse() }
-                for (var i = 0; i < rows.length; i++) { table.append(rows[i]) }
-            })
-            function comparer(index) {
-                return function (a, b) {
-                    var valA = getCellValue(a, index), valB = getCellValue(b, index)
-                    return $.isNumeric(valA) && $.isNumeric(valB) ? valA - valB : valA.localeCompare(valB)
-                }
+        //------------------------- Sorting ------------------------
+        $('th').click(function () {
+            var table = $(this).parents('table').eq(0)
+            var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
+            this.asc = !this.asc
+            if (!this.asc) { rows = rows.reverse() }
+            for (var i = 0; i < rows.length; i++) { table.append(rows[i]) }
+        })
+        function comparer(index) {
+            return function (a, b) {
+                var valA = getCellValue(a, index), valB = getCellValue(b, index)
+                return $.isNumeric(valA) && $.isNumeric(valB) ? valA - valB : valA.localeCompare(valB)
             }
-            function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
-            //------------------------- Sorting ------------------------
-            //-------------------------filter------------------------
-            $("#searchInput").keyup(function () {
-                //hide all the rows
-                $("#result").find("tr").hide();
+        }
+        function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
+        //------------------------- Sorting ------------------------
+        //-------------------------filter------------------------
+        $("#searchInput").keyup(function () {
+            //hide all the rows
+            $("#result").find("tr").hide();
 
-                //split the current value of searchInput
-                var data = this.value.split(" ");
-                //create a jquery object of the rows
-                var jo = $("#result").find("tr");
+            //split the current value of searchInput
+            var data = this.value.split(" ");
+            //create a jquery object of the rows
+            var jo = $("#result").find("tr");
 
-                //Recusively filter the jquery object to get results.
-                $.each(data, function (i, v) {
-                    jo = jo.filter("*:contains('" + v + "')");
-                });
-                //show the rows that match.
-                jo.show();
-                //Removes the placeholder text
-
-            }).focus(function () {
-                this.value = "";
-                $(this).css({ "color": "black" });
-                $(this).unbind('focus');
-            }).css({ "color": "#C0C0C0" });
-            //-------------------------filter------------------------
-
-            $.ajax(
-            {
-                url: 'http://localhost:13131/api/BDC',
-                type: 'GET',
-                datatype: 'json',
-                success: function (data) {
-                    data = JSON.parse(data);
-                    var html = '<tbody>';
-                    for (var i = 0; i < data.Table.length; i++) {
-                        html += '<tr>';
-                        html += '<td>' + data.Table[i].RowNum + '</td>';
-                        html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
-                        html += '<td>' + data.Table[i].Docver + '</td>';
-                        html += '<td>' + data.Table[i].QuotationNo + '</td>';
-                        html += '<td>' + data.Table[i].Price + '</td>';
-                        html += '<td>' + data.Table[i].Cost + '</td>';
-                        html += '<td>' + data.Table[i].Profit + '</td>';
-                        html += '<td>';
-                        html += '<a href="/BDC/EditBDC?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
-                        html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
-                        html += '</td>';
-                        html += '</tr>';
-                    }
-                    html += '</tbody>';
-                    document.getElementById("result").innerHTML = html;
-                },
-                error: function (msg) {
-                    alert(msg)
-                }
+            //Recusively filter the jquery object to get results.
+            $.each(data, function (i, v) {
+                jo = jo.filter("*:contains('" + v + "')");
             });
+            //show the rows that match.
+            jo.show();
+            //Removes the placeholder text
+
+        }).focus(function () {
+            this.value = "";
+            $(this).css({ "color": "black" });
+            $(this).unbind('focus');
+        }).css({ "color": "#C0C0C0" });
+        //-------------------------filter------------------------
+
+        $.ajax(
+        {
+            url: 'http://localhost:13131/api/BDC',
+            type: 'GET',
+            datatype: 'json',
+            success: function (data) {
+                data = JSON.parse(data);
+                var html = '<tbody>';
+                for (var i = 0; i < data.Table.length; i++) {
+                    html += '<tr>';
+                    html += '<td>' + data.Table[i].RowNum + '</td>';
+                    html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
+                    html += '<td>' + data.Table[i].Docver + '</td>';
+                    html += '<td>' + data.Table[i].QuotationNo + '</td>';
+                    html += '<td>' + data.Table[i].Price + '</td>';
+                    html += '<td>' + data.Table[i].Cost + '</td>';
+                    html += '<td>' + data.Table[i].Profit + '</td>';
+                    html += '<td>';
+                    html += '<a href="/BDC/EditBDC?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                    html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                    html += '</td>';
+                    html += '</tr>';
+                }
+                html += '</tbody>';
+                document.getElementById("result").innerHTML = html;
+            },
+            error: function (msg) {
+                alert(msg)
+            }
         });
+    });
     function RowDelete(id) {
         var dataObject = { ID: id };
         $.ajax(
