--- a/Alpha/AlphaMvc/Views/Employee/IndexEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/IndexEmployee.cshtml
@@ -4,8 +4,8 @@
 
 <h2>Teachnician</h2>
 
-<table>
-    <thead>
+<table class="table table-striped">
+    <thead class="bgthead">
         <tr>
             <th>No.</th>
             <th>Emp ID</th>
