--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -5,9 +5,8 @@
 <h2>
     JobOrder Create
 </h2>
-@* =============== dialog *@
-<link href="@Url.Content("~/Content/Dialog/dialogstyle.css")" rel="stylesheet" type="text/css" />
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+@*<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />*@
+@*<link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />*@
 @* =============== Tab *@
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
@@ -19,26 +18,38 @@
 <link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
 
-<link href="@Url.Content("~/Content/editable/popupgrid.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
+    <!-- Modal -->
+    <div class="modal fade" id="customerDialog" role="dialog">
+        <div class="modal-dialog">
 
-<div id="customerDialog" title="ลูกค้า" class="dialogstyle">
-    <table id="tblCustomer" class="table table-striped">
-        <thead>
-            <tr>
-                <th>No.</th>
-                <th>รหัสลูกค้า</th>
-                <th>ลูกค้า</th>
-                <th>เบอร์โทร</th>
-                <th>บุคคลติดต่อ</th>
-            </tr>
-        </thead>
-        <tbody id="customerBody">
-        </tbody>
-    </table>
-</div>
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Customer</h4>
+                </div>
+                <div class="modal-body">
+                    <table id="tblCustomer" class="table table-striped">
+                        <thead class="bgthead">
+                            <tr>
+                                <th>No.</th>
+                                <th>รหัสลูกค้า</th>
+                                <th>ลูกค้า</th>
+                                <th>เบอร์โทร</th>
+                                <th>บุคคลติดต่อ</th>
+                            </tr>
+                        </thead>
+                        <tbody id="customerBody"></tbody>
+                    </table>
+                </div>
+                @*<div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>*@
+            </div>
 
-<div id="myModal">
+        </div>
+    </div>
+
     @using (Html.BeginForm())
     {
 
@@ -81,8 +92,8 @@
 
                 <li>
                     <label>ลูกค้า</label>
-                    <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" id="opener">
-                        <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
+                    <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#customerDialog">
+                        <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage"  />
                     </a>
                     <input type="hidden" id="hidCustID" />
                 </li>
@@ -234,7 +245,7 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <a id="add-row6" href="#">Add Row</a>
+                                            <a id="add-row6" href="#">+ Add Row</a>
                                             
                                                 <table class="tableexpense">
                                                     <tr>
@@ -353,7 +364,7 @@
                                                     </tbody>
                                                 </table>
                                                 </div>
-                                                <a id="add-row7" href="#">Add Row</a>
+                                                <a id="add-row7" href="#">+ Add Row</a>
                                             @*<div class="myDIV">*@
                                                 <table>
                                                     <tr>
@@ -552,7 +563,7 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <a id="add-row2" href="#">Add Row</a>
+                                            <a id="add-row2" href="#">+ Add Row</a>
                                             <table>
                                                 <tr>
                                                     <td>
@@ -625,7 +636,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a id="add-row3" href="#">Add Row</a>
+                                            <a id="add-row3" href="#">+ Add Row</a>
                                         </div>
                                         <p></p>
 
@@ -693,7 +704,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a id="add-row4" href="#">Add Row</a>
+                                            <a id="add-row4" href="#">+ Add Row</a>
                                         </div>
                                         <p></p>
 
@@ -761,7 +772,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a id="add-row5" href="#">Add Row</a>
+                                            <a id="add-row5" href="#">+ Add Row</a>
                                         </div>
                                         <p></p>
 
@@ -770,8 +781,8 @@
                                     <div>
                                         <a href="@Url.Action("CreateBorrow", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                         <div class="grigbar">
-                                            <table id="example" class="display" cellspacing="0">
-                                                <thead>
+                                            <table class="table table-striped">
+                                                <thead class="bgthead">
                                                     <tr>
                                                         <th rowspan="2">ลำดับ</th>
                                                         <th rowspan="2">Serial</th>
@@ -875,35 +886,12 @@
             </ul>
         </form>
     }
-</div>
-
 <script type="text/javascript">
     //------------------ Standard --------------------------
     hljs.tabReplace = '    '; // 4 spaces
     hljs.initHighlightingOnLoad();
 
     $(function () {
-        $("#customerDialog").dialog({
-
-            scroll: true,
-            height: "auto",
-            width: 550,
-            paging: true,
-            modal: true,
-            autoOpen: false,         
-            show: {
-                effect: "blind",
-                duration: 1000
-            },
-            hide: {
-                effect: "explode",
-                duration: 1000
-            }
-        });
-
-        $("#opener").on("click", function () {
-            $("#customerDialog").dialog("open");
-        });
 
         $("#datepicker").datepicker();
         $("#datepicker2").datepicker();
