--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -3,16 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    
+        
         @*---------------------------- Default --------------------------*@
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/jquery-ui.css")" rel="stylesheet" type="text/css" />
-
-        @*<script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")" type="text/javascript"></script>*@
         <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
 
          @*---------------------------- Menu,Table --------------------------*@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
@@ -21,6 +19,10 @@
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
 
         @* ---------------------------- menu -------------------------- *@
+        <link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />
+        <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+
         <script language="javascript" type="text/javascript">
         $(function () {
             $("#products").accordion();
