--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -5,8 +5,8 @@
 <h2>WageTechnician</h2>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 
-<table>
-    <thead>
+<table class="table table-striped">
+    <thead class="bgthead">
         <tr>
             <th>No.</th>
             <th>Emp ID</th>
