--- a/Alpha/AlphaMvc/Views/WageVendor/IndexWageVendor.cshtml
+++ b/Alpha/AlphaMvc/Views/WageVendor/IndexWageVendor.cshtml
@@ -4,8 +4,8 @@
 
 <h2>WageVendor</h2>
 
-<table>
-    <thead>
+<table class="table table-striped">
+    <thead class="bgthead">
         <tr>
             <th>No.</th>
             <th>FullName</th>
