--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -110,8 +110,8 @@
                                     <div>
                                         <a href="@Url.Action("CreateJobOrder", "JobOrder")" class="alink"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" /></a>
                                         <div class="grigbar">
-                                            <table id="example" class="display" cellspacing="0">
-                                                <thead>
+                                            <table class="table table-striped">
+                                                <thead class="bgthead">
                                                     <tr>
                                                         <th>No.</th>
                                                         <th>Job No.</th>
