--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -780,8 +780,8 @@
                                     <div>
                                         <a href="@Url.Action("Create", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                         <div class="grigbar">
-                                            <table id="example" class="display" cellspacing="0">
-                                                <thead>
+                                            <table class="table table-striped">
+                                                <thead class="bgthead">
                                                     <tr>
                                                         <th rowspan="2">ลำดับ</th>
                                                         <th rowspan="2">Serial</th>
