--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -1502,11 +1502,14 @@ th {
 .table-striped > tbody > tr:nth-child(odd) > th {
   /*background-color: #f9f9f9;*/
    background-color: #effae6;
+   cursor: pointer;
 }
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
+  background-color: #c7dfd3;
+  cursor: pointer;
 }
 
 table col[class*="col-"] {
