--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -29,18 +29,20 @@
                     <h4 class="modal-title">Customer</h4>
                 </div>
                 <div class="modal-body">
-                    <table id="tblCustomer" class="table table-striped table-hover">
-                        <thead class="bgthead">
-                            <tr>
-                                <th>No.</th>
-                                <th>รหัสลูกค้า</th>
-                                <th>ลูกค้า</th>
-                                <th>เบอร์โทร</th>
-                                <th>บุคคลติดต่อ</th>
-                            </tr>
-                        </thead>
-                        <tbody id="customerBody"></tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table id="tblCustomer" class="table table-striped table-hover">
+                            <thead class="bgthead">
+                                <tr>
+                                    <th>No.</th>
+                                    <th>รหัสลูกค้า</th>
+                                    <th>ลูกค้า</th>
+                                    <th>เบอร์โทร</th>
+                                    <th>บุคคลติดต่อ</th>
+                                </tr>
+                            </thead>
+                            <tbody id="customerBody"></tbody>
+                        </table>
+                    </div>
                     @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
                 </div>
             </div>
